--- a/src/app/modules/Components/login/login.component.html
+++ b/src/app/modules/Components/login/login.component.html
@@ -7,18 +7,44 @@
 <div class="main">
   <div class="col-md-6 col-sm-12">
     <div class="login-form">
-      <form [formGroup]="loginDetails" (ngSubmit)="login()">
+
+
+      <form [formGroup]="loginDetails" (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <label>User Name</label>
-          <input type="email" formControlName="email" class="form-control" placeholder="User Name">
+          <label for="email">email</label>
+          <input type="email" formControlName="email" class="form-control"
+                 [ngClass]="{ 'is-invalid': submitted && f.email.errors }"/>
+          <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+            <div *ngIf="f.email.errors.required">email is required</div>
+          </div>
         </div>
         <div class="form-group">
-          <label>Password</label>
-          <input type="password" formControlName="password" class="form-control" placeholder="Password">
+          <label for="password">Password</label>
+          <input type="password" formControlName="password" class="form-control"
+                 [ngClass]="{ 'is-invalid': submitted && f.password.errors }"/>
+          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+            <div *ngIf="f.password.errors.required">Password is required</div>
+          </div>
         </div>
-        <button type="submit" class="btn btn-black mr-3">Login</button>
-        <button type="submit" class="btn btn-secondary">Register</button>
+        <div class="form-group">
+          <button [disabled]="loading" class="btn btn-primary">Login</button>
+          <a [routerLink]="['/register']" class="btn btn-link">Register</a>
+        </div>
       </form>
+
+      <!--
+            <form [formGroup]="loginDetails" (ngSubmit)="login()">
+              <div class="form-group">
+                <label>User Name</label>
+                <input type="email" formControlName="email" class="form-control" placeholder="User Name">
+              </div>
+              <div class="form-group">
+                <label>Password</label>
+                <input type="password" formControlName="password" class="form-control" placeholder="Password">
+              </div>
+              <button type="submit" class="btn btn-black mr-3">Login</button>
+              <button type="submit" class="btn btn-secondary">Register</button>
+            </form>-->
     </div>
   </div>
 </div>
