--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
+<!-- nav -->
+<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
+  <div class="navbar-nav">
+    <a class="nav-item nav-link" routerLink="/">Home</a>
+    <a class="nav-item nav-link" (click)="logout()">Logout</a>
+  </div>
+</nav>
+
+<!-- main app container -->
 <div class="container mt-5">
-  <app-login></app-login>
+  <!--  <div class="row">-->
+  <!--        <alert></alert>-->
+  <router-outlet></router-outlet>
+  <!--  </div>-->
 </div>
