--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,3 +1,3 @@
 <h1>Hi There !</h1>
-<p>You're logged in with Angular 7!!</p>
-<h3>All registered users:</h3>
+<p>You're logged in with TUI!!</p>
+<h3>All Tweets Will show here:</h3>
